# csv2dynamodb

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test_data.csv  test_data2.csv  update.sh
.github/: dependabot.yml
.github/workflows/: build.yml  dependabot-auto-merge copy.yml  dependabot-auto-merge.yml  deploy.yml  e2e.yml
src/: lib.rs  main.rs
tests/: test_data2.csv
tests/infra/: README.md  cdk.json  eslint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
tests/infra/lib/: infra-stack.ts
tests/infra/test/: infra.test.ts
