[package]
name = "csv2dynamodb"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.3.0", package = "aws-config" }
aws-sdk-dynamodb = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.4.0", package = "aws-sdk-dynamodb" }
tokio = { version = "1", features = ["full"] }
serde_json = "1"

structopt = { version = "0.3", default-features = false }
tracing-subscriber = { version = "0.3.1", features = ["fmt"] }
tracing = "0.1"
regex = "1"
